--- a/infra/package.json
+++ b/infra/package.json
@@ -13,24 +13,26 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.11.30",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "aws-cdk": "2.136.1",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.4.3",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
+    "aws-cdk": "2.136.1",
     "eslint": "8.41.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.4.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3"
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.4.3"
   },
   "dependencies": {
     "aws-cdk-lib": "2.136.1",
+    "cdk-nextjs-standalone": "^4.1.1",
     "constructs": "^10.0.0",
+    "dotenv": "^16.4.5",
     "source-map-support": "^0.5.21"
   }
 }
