--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=resumeassist
 
+server.port=8080
+
 spring.ai.openai.api-key=${OPEN_AI_API_KEY}
 
 bucket.name=${BUCKET_NAME}
