--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/charts": "^7.13.0",
     "@dotlottie/react-player": "^1.6.19",
+    "@mantine/charts": "^7.13.0",
     "@mantine/core": "7.1.0",
     "@mantine/dropzone": "^7.13.2",
     "@mantine/form": "7.1.0",
     "@mantine/hooks": "7.1.0",
     "@mantine/modals": "7.1.0",
+    "@mantine/notifications": "^7.13.3",
     "@tabler/icons-react": "^2.38.0",
     "axios": "^1.5.1",
     "cookies-next": "^4.2.1",
