--- a/infra/lambdas/pom.xml
+++ b/infra/lambdas/pom.xml
@@ -75,7 +75,11 @@
             <artifactId>s3</artifactId>
             <version>2.21.20</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-dynamodb</artifactId>
+            <version>1.12.774</version>
+        </dependency>
     </dependencies>
 
 </project>
