--- a/infra/pom.xml
+++ b/infra/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>infrastructure</module>
         <module>fargate-jobs</module>
+        <module>lambdas/java</module>
     </modules>
 
     <packaging>pom</packaging>
