--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@tabler/icons-react": "^2.38.0",
     "axios": "^1.5.1",
     "cookies-next": "^4.2.1",
+    "date-fns": "^4.1.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
