--- a/infra/lambdas/nodejs/package.json
+++ b/infra/lambdas/nodejs/package.json
@@ -18,6 +18,7 @@
     "@types/aws-lambda": "^8.10.145",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1691.0",
+    "date-fns": "^4.1.0",
     "uuid": "^11.0.1"
   },
   "devDependencies": {
